tests/fixtures/errors/type-error/src/main.ts
import { user } from './types';
console.log(user);